# playstation_adapter_code

./: .gitmodules  CMakeLists.txt  README.md  build.sh
src/: blink.c  drum.c  drum.h  keybinds.c  keybinds.h  main.c  pins.h  settings.c  settings.h  spi.c  spi.h  utils.c  utils.h
src/tinyusb/: usb.c  usb.h  usb_descriptors.c  usb_descriptors.h
